syntax = "proto3";


option java_package = "com.example.timehelm.state";
option java_multiple_files = true;


message Settings {
  // negative values (generally -1) indicate value is not set
  int32 dailyHoursMin = 1;
  int32 dailyHoursMax = 2;
  bool shabbat = 3;

}
