syntax = "proto3";


option java_package = "com.timehelm.timehelm.state";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";


// current goal (set on difficulty change)
// current start time (optional)
// current time tracked today


message State {
  bool isTracking = 1;
  google.protobuf.Timestamp startTime = 2;
  google.protobuf.Timestamp timeWorked = 3;

  int32 streakDays = 4;
  google.protobuf.Timestamp lastDayStreak = 5;

  int32 prevXp = 6;
  map<string, bool> xpGoals = 7;
  int32 xpTarget = 8;
}
